fix: improve netlog table readability in darkmode

--- a/static/catapult-overrides/sleuth-overrides.css
+++ b/static/catapult-overrides/sleuth-overrides.css
@@ -40,3 +40,7 @@
 .bp3-dark .styled-table th {
   background-color: #202b33;
 }
+
+.bp3-dark .styled-table td {
+  background-color: #293741;
+}
